# cabide-ai

./: .dockerignore  .env.example  .gitignore  DEPLOY_PLAN.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  OAUTH_INTEGRATION_COMPLETE.md  OAUTH_SETUP.md  PROMPT_TEMPLATES.md  README.md  SETUP.md  TODO.md  UV_COMMANDS.md  coverage.json  deploy.md  docker-compose.yml  external_tasks.md  pyproject.toml  pytest.ini  rename-photo.py  temp_1_70_20251229-195429.HEIC
.github/workflows/: ci.yml  deploy.yml  release.yml
scripts/: create-release.sh  setup_brazil_infra.sh  sync-secrets.sh
src/: __init__.py  api.py  api_client.py  app.py  auth_ui.py  config.py  driver_service.py  engine.py  main.py  oauth_helper.py  rename-photo.py  setup_brazil_infra.sh
tests/: conftest.py  test_api.py  test_config.py
